fixed tech section

--- a/portfolio.html
+++ b/portfolio.html
@@ -102,15 +102,55 @@
                 <h2> I have experience working with a wide range of technologies and languages. I am always looking to
                     learn new technologies and improve my skill.</h2>
                 <div class="container">
-                    <h3>FrontEnd:</h3>
-                    <h4>HTML, CSS, Javascript, Bootstrap, React, Redux, Python</h4>
-                    <h3>BackEnd:</h3>
-                    <h4>PostgresSQL, DevOps, Flask, Django, CI/CD, SDLC</h4>
-                    <h3>Tools:</h3>
-                    <h4>GitHub, VS Code, Docker, Insomnia, AWS, Firebase/Firestone, Azure, Expo SDK</h4>
+                    <ol class="skills">
+                        <li class="front">
+                            <h3>FrontEnd:</h3>
+                            <hr>
+                            <h4>HTML, CSS, Javascript, Bootstrap, React, Redux, Python</h4>
+                        </li>
+                        <li class="back">
+                            <h3>BackEnd:</h3>
+                            <hr>
+                            <h4>PostgresSQL, DevOps, Flask, Django, CI/CD, SDLC</h4>
+                        </li>
+                        <li class="tools">
+                            <h3>Tools:</h3>
+                            <hr>
+                            <h4>GitHub, VS Code, Docker, Insomnia, AWS, Firebase/Firestone, Azure, Expo SDK</h4>
+                        </li>
+                    </ol>
                 </div>
-                <div class="container">
-                    <!--Images of tech and apps go here-->
+                <div class="tech-container">
+                    <ul class="tech-icons">
+                        <li style="margin:0px; padding: 0px;"><img src="./images/Postgresql_elephant.svg.png"
+                                alt="skill" style="height: 85px;width: auto;margin: 0.75rem;"></li>
+                        <li style="margin:0px; padding: 0px;"><img
+                                src="./images/docker-logo-CF97D0124B-seeklogo.com.png" alt="skill"
+                                style="height: 85px;width: auto;margin: 0.75rem;"></li>
+                        <li style="margin:0px; padding: 0px;"><img src="./images/2560px-Npm-logo.svg.png" alt="skill"
+                                style="height: 85px;width: auto;margin: 0.75rem;"></li>
+                        <li style="margin:0px; padding: 0px;"><img
+                                src="./images/javascript.081325c6f229605dce15142ddd948d6d.svg" alt=" skill"
+                                style="height: 85px;width: auto;margin: 0.75rem;"></li>
+                        <li style="margin:0px; padding: 0px;"><img
+                                src="./images/html5-without-wordmark-color-logo-14D252D878-seeklogo.com.png" alt="skill"
+                                style="height: 85px;width: auto;margin: 0.75rem;"></li>
+                        <li style="margin:0px; padding: 0px;"><img src="./images/CSS3_logo.svg.png" alt="skill"
+                                style="height: 85px;width: auto;margin: 0.75rem;"></li>
+                        <li style="margin:0px; padding: 0px;"><img src="./images/python-5-logo-png-transparent.png"
+                                alt="skill" style="height: 85px;width: auto;margin: 0.75rem;"></li>
+                        <li style="margin:0px; padding: 0px;"><img src="./images/redux-logo-9CA6836C12-seeklogo.com.png"
+                                alt="skill" style="height: 85px;width: auto;margin: 0.75rem;"></li>
+                        <li style="margin:0px; padding: 0px;"><img src="./images/Visual_Studio_Code_1.35_icon.svg.png"
+                                alt="skill" style="height: 85px;width: auto;margin: 0.75rem;"></li>
+                        <li style="margin:0px; padding: 0px;"><img src="./images/Bootstrap_logo.svg.png" alt="skill"
+                                style="height: 85px;width: auto;margin: 0.75rem;"></li>
+                        <li style="margin:0px; padding: 0px;"><img
+                                src="./images/insomnia-logo-A35E09EB19-seeklogo.com.png" alt=" skill"
+                                style="height: 85px;width: auto;margin: 0.75rem;"></li>
+                        <li style="margin:0px; padding: 0px;"><img src="./images/firebase-1-logo-png-transparent.png"
+                                alt="skill" style="height: 85px;width: auto;margin: 0.75rem;"></li>
+                    </ul>
                 </div>
             </div>
         </div>
