--- a/portfolio.html
+++ b/portfolio.html
@@ -18,6 +18,7 @@
 </head>
 
 <body>
+
     <!--Title and Navigation Items-->
 
     <nav id="desktop-nav">
@@ -42,6 +43,7 @@
             </li>
         </ul>
     </nav>
+
     <!--First Section-->
     <div class="container text-center mt-4">
         <div class="row">
@@ -57,8 +59,8 @@
                 <div class="btn btn-color-1" onclick="location.href='./#contact'">let's connect!</div>
             </div>
         </div>
-
     </div>
+
     <!--Second Section-->
     <div class="container text-start mt-4">
         <div class="row">
@@ -77,8 +79,8 @@
     </div>
 
     <!--Third Section-->
-    <div class="container text-start mt-4">
-        <h1>Projects</h1>
+    <div class="container text-start mt-4 mb-5">
+        <h1 class="mb-4">Projects</h1>
         <div class=" details-container color-container">
             <div class="article container">
                 <img src="" alt="" class="" />
@@ -155,27 +157,47 @@
             </div>
         </div>
     </div>
+
     <!--Fifth Section-->
-    <form class="container mt-5" method="post">
-        <div class="form-group">
-            <label for="exampleInputName1">Name</label>
-            <input type="text" class="form-control" id="exampleInputName1" placeholder="Full Name" required
-                aria-required="true">
-        </div>
-        <div class="form-group">
-            <label for="exampleInputEmail1">Email address</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email Address" required
-                aria-required="true">
-        </div>
-        <div class="form-group">
-            <label for="exampleInputMessage1">Message</label>
-            <textarea type="text" class="form-control" id="exampleInputMessage1" placeholder="Type your message here..."
-                required aria-required="true"></textarea>
-        </div>
-        <div class="row justify-content-center">
-            <button type="submit" class="btn btn-color-4">Send Message</button>
-        </div>
-    </form>
+    <div class="container text-start mt4">
+        <h1>Contact Me</h1>
+        <form class="container mt-5 rounded" method="post" onsubmit="sendEmail(); reset(); return false;">
+            <div class="form-group">
+                <label for="Name">Name</label>
+                <input id="name" type="text" class="form-control" placeholder="Full Name" required aria-required="true">
+            </div>
+            <div class="form-group">
+                <label for="Email">Email address</label>
+                <input id="email" type="email" class="form-control" placeholder="Email Address" required
+                    aria-required="true">
+            </div>
+            <div class="form-group">
+                <label for="Message">Message</label>
+                <textarea type="text" class="form-control" id="message" placeholder="Type your message here..." required
+                    aria-required="true"></textarea>
+            </div>
+            <div class="row justify-content-center">
+                <button type="submit" class="btn btn-color-4">Send Message</button>
+            </div>
+        </form>
+    </div>
+    <script>
+        function sendEmail() {
+            Email.send({
+                Host: "smtp.gmail.com",
+                Username: "raquel.elysia.r@gmail.com",
+                Password: "Psalm34:18",
+                To: 'raquel.elysia.r@gmail.com',
+                From: document.getElementById('email').value,
+                Subject: "New Contact Form Enquiry",
+                Body: "Name: " + document.getElementById('name').value
+                    + "<br> Email: " + document.getElementById('email').value
+                    + "<br> Message: " + document.getElementById('message').value
+            }).then(
+                message => alert("Thank you for reaching out! I will be in touch with you soon.")
+            );
+        }
+    </script>
 
 
     <!--Footer Info-->
@@ -203,6 +225,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
         integrity="sha384-f3HtgzLu4K2kl8jLqrs+o5AqF/R/J6bV10GIbc7IBNBfB9d3WqIFd0heWEwHQ8Rb"
         crossorigin="anonymous"></script>
+    <script src="https://smtpjs.com/v3/smtp.js">
+    </script>
 </body>
 
 </html>
