--- a/portfolio.html
+++ b/portfolio.html
@@ -194,7 +194,7 @@
                     + "<br> Email: " + document.getElementById('email').value
                     + "<br> Message: " + document.getElementById('message').value
             }).then(
-                message => alert("Thank you for reaching out! I will be in touch with you soon.")
+                message => alert("Thank you for reaching out! I will be in touch with you soon!")
             );
         }
     </script>
