--- a/portfolio.html
+++ b/portfolio.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="portfolio.css">
+    <link rel="stylesheet" href="mediaqueries.css">
 
     <!-- Font Awesome CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
@@ -20,49 +21,61 @@
 <body>
 
     <!--Title and Navigation Items-->
-
     <nav id="desktop-nav">
         <div class="profile-pic">
             <img src="./images/Untitled design.png" alt="Raquel's Profile Picture" />
         </div>
-        <ul class="nav">
-            <li class="nav-item">
-                <a class="nav-link" href="#home">Portfolio</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#about">About Me</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#projects">Projects</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#tech">Technologies</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#contact">Contact Me</a>
-            </li>
+        <ul class="navlink">
+            <li><a href="#home" class="active">Portfolio</a></li>
+            <li><a href="#about">About Me</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#tech">Technologies</a></li>
+            <li><a href="#contact">Contact Me</a></li>
         </ul>
     </nav>
-
-    <!--First Section-->
-    <div class="container text-center mt-4">
-        <div class="row">
-            <h1>Hi, I'm Raquel, welcome to my portfolio! </h1>
+    <nav id="hamburger-nav">
+        <div class="profile-pic">
+            <img src="./images/Untitled design.png" alt="Raquel's Profile Picture" />
         </div>
-        <div class="row align-items-start mt-4">
-            <div class="col">
-                <h2> I'm Raquel, software developer with a background in business management and supply chain. Below,
-                    you
-                    will see my projects and skills. Feel free to contact me with questions on how I can help you or
-                    your
-                    business!</h2>
-                <div class="btn btn-color-1" onclick="location.href='./#contact'">let's connect!</div>
+        <div class="hamburder-menu">
+            <div class="hamburger-icon" onclick="toggleMenu()">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+            <div class="menu-links">
+                <li><a href="#home" class="active" onclick="toggleMenu()">Portfolio</a></li>
+                <li><a href="#about" onclick="toggleMenu()">About Me</a></li>
+                <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
+                <li><a href="#tech" onclick="toggleMenu()">Technologies</a></li>
+                <li><a href="#contact" onclick="toggleMenu()">Contact Me</a></li>
             </div>
         </div>
-    </div>
+    </nav>
+
+
+    <!--First Section-->
+    <section class="home" id="home">
+        <div class="container text-center mt-4">
+            <div class="row">
+                <h1>Hi, I'm Raquel, welcome to my portfolio! </h1>
+            </div>
+            <div class="row align-items-start mt-4">
+                <div class="col">
+                    <h2> I'm Raquel, software developer with a background in business management and supply chain.
+                        Below,
+                        you
+                        will see my projects and skills. Feel free to contact me with questions on how I can help you or
+                        your
+                        business!</h2>
+                    <div class="btn btn-color-1" onclick="location.href='./#contact'">let's connect!</div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!--Second Section-->
-    <div class="container text-start mt-4">
+    <div class="container mt-4">
         <div class="row">
             <h1>About Me </h1>
         </div>
@@ -79,15 +92,16 @@
     </div>
 
     <!--Third Section-->
-    <div class="container text-start mt-4 mb-5">
-        <h1 class="mb-4">Projects</h1>
+    <div class="container mt-4 mb-5">
+        <h1 class="project-title">Projects</h1>
         <div class=" details-container color-container">
             <div class="article container">
-                <img src="" alt="" class="" />
+                <img src="images/IMG_0865.PNG" alt="nucampsite" class="project-img" />
             </div>
+            <h2 class="project-container">Nucamp Rental Website</h2>
             <div class="btn-container">
                 <button class="btn btn-color-3 project btn"
-                    onclick="location.href='https://github.com/'">GitHub</button>
+                    onclick="location.href='https://github.com/RaquelHenry/nucampsitereact' ">GitHub</button>
 
             </div>
         </div>
@@ -95,7 +109,7 @@
     </div>
 
     <!--Fourth Section-->
-    <div class="container text-start mt-4">
+    <div class="container mt-4">
         <div class="row">
             <h1>Technologies</h1>
         </div>
@@ -159,7 +173,7 @@
     </div>
 
     <!--Fifth Section-->
-    <div class="container text-start mt4">
+    <div class="container mt4">
         <h1>Contact Me</h1>
         <form class="container mt-5 rounded" method="post" onsubmit="sendEmail(); reset(); return false;">
             <div class="form-group">
@@ -226,6 +240,7 @@
         crossorigin="anonymous"></script>
     <script src="https://smtpjs.com/v3/smtp.js">
     </script>
+    <script src="portfolio.js"></script>
 </body>
 
 </html>
