edited profile pic

--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
     <!--Title and Navigation Items-->
     <nav id="desktop-nav">
         <div class="profile-pic">
-            <img src="./images/Untitled design.png" alt="Raquel's Profile Picture" />
+            <img src="./images/Profile Pic-PhotoRoom.png" alt="Raquel's Profile Picture" />
         </div>
         <ul class="navlink">
             <li><a href="#home" class="active">Portfolio</a></li>
@@ -35,9 +35,9 @@
     </nav>
     <nav id="hamburger-nav">
         <div class="profile-pic">
-            <img src="./images/Untitled design.png" alt="Raquel's Profile Picture" />
+            <img src="./images/Profile Pic-PhotoRoom.png" alt="Raquel's Profile Picture" />
         </div>
-        <div class="hamburder-menu">
+        <div class="hamburger-menu">
             <div class="hamburger-icon" onclick="toggleMenu()">
                 <span></span>
                 <span></span>
@@ -74,8 +74,9 @@
         </div>
     </section>
 
+    <br>
     <!--Second Section-->
-    <div class="container mt-4">
+    <div class="container mt-4" id="about">
         <div class="row">
             <h1>About Me </h1>
         </div>
@@ -91,8 +92,10 @@
         </div>
     </div>
 
+    <br>
+
     <!--Third Section-->
-    <div class="container mt-4 mb-5">
+    <div class="container mt-4 mb-5" id="projects">
         <h1 class="project-title">Projects</h1>
         <div class=" details-container color-container">
             <div class="article container">
@@ -105,11 +108,12 @@
 
             </div>
         </div>
-
     </div>
 
+    <br>
+
     <!--Fourth Section-->
-    <div class="container mt-4">
+    <div class="container mt-4" id="tech">
         <div class="row">
             <h1>Technologies</h1>
         </div>
@@ -173,7 +177,7 @@
     </div>
 
     <!--Fifth Section-->
-    <div class="container mt4">
+    <div class="container mt4" id="contact">
         <h1>Contact Me</h1>
         <form class="container mt-5 rounded" method="post" onsubmit="sendEmail(); reset(); return false;">
             <div class="form-group">
