new changes to projects

--- a/portfolio.html
+++ b/portfolio.html
@@ -68,7 +68,7 @@
                         will see my projects and skills. Feel free to reach out if you are interested in my diverse
                         background.
                     </h2>
-                    <div class="btn btn-color-1" onclick="location.href='./#contact'">let's connect!</div>
+                    <div class="btn btn-color-1" onclick="location.href='#contact'">let's connect!</div>
                 </div>
             </div>
         </div>
@@ -100,33 +100,25 @@
 
 
     <!--Third Section-->
+
     <section class="projects" id="projects">
-        <div class="container mt-4 mb-5">
-            <h1 class="project-title">Projects</h1>
-            <div class=" details-container color-container">
-                <div class="article container">
-                    <img src="images/IMG_0865.PNG" alt="nucampsite" class="project-img" />
-                </div>
-                <h2 class="project-container">Nucamp Rental Website</h2>
-                <div class="btn-container">
-                    <button class="btn btn-color-3 project btn"
-                        onclick="location.href='https://github.com/RaquelHenry/nucampsitereact' ">GitHub</button>
-
-                </div>
+        <h1>Projects</h1>
+        <div class="project-content">
+            <div class="box">
+                <img src="images/IMG_0865.PNG">
+                <h2>Nucamp Rental Website</h2>
+                <div class="btn GitHub-btn" onclick="location.href='https://github.com/RaquelHenry/nucampsitereact'">
+                    GitHub</div>
             </div>
-            <h1 class="project-title">Projects</h1>
-            <div class=" details-container color-container">
-                <div class="article container">
-                    <img src="images/IMG_0865.PNG" alt="nucampsite" class="project-img" />
-                </div>
-                <h2 class="project-container">Nucamp Rental Website</h2>
-                <div class="btn-container">
-                    <button class="btn btn-color-3 project btn"
-                        onclick="location.href='https://github.com/RaquelHenry/nucampsitereact' ">GitHub</button>
 
-                </div>
+            <div class="box">
+                <img src="images/Screenshot 2023-12-17 at 5.23.06 PM.png">
+                <h2>Food Trivia w/Python</h2>
+                <div class="btn GitHub-btn" onclick="location.href='https://github.com/RaquelHenry/python-projects'">
+                    GitHub</div>
             </div>
         </div>
+
     </section>
 
     <hr class="solid">
@@ -255,7 +247,7 @@
                     <a href="https://github.com/RaquelHenry"><i class="fab fa-github fa-3x"></i></a>
                     <a href="https://www.linkedin.com/in/raquel-henry-343a82a5/"><i
                             class="fab fa-linkedin fa-3x"></i></a>
-                    <a href=""><i class="fab fa-facebook fa-3x"></i></a>
+                    <a href="https://www.facebook.com/raquel.elysia/"><i class="fab fa-facebook fa-3x"></i></a>
                 </div>
             </div>
         </div>
