fixed resume link issue

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         always seeking opportunities to developing new skills and honing my existing ones. I am a firm
                         believer in the power of teamwork and collaboration. Inclusion is a part of who I am.</h2>
                     <div class="row justify-content-center">
-                        <div class="btn btn-color-2" onclick="window.open('./documents/Resume-RH.pdf')">Resume</div>
+                        <div class="btn btn-color-2" onclick="window.open('./documents/resume.pdf')">Resume</div>
                     </div>
                 </div>
             </div>
